<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/movieBackdrop"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="false"
        android:scaleType="fitXY"
        android:text="@string/movie_backdrop" />

    <TextView
        android:id="@+id/movieTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/movieBackdrop"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:layout_gravity="start"
        android:layout_marginLeft="5dp"
        android:text="@string/movie_title"
        android:textAlignment="viewStart"
        android:textColor="@android:color/white"
        android:textSize="25dp" />

    <ToggleButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/addToFavourites"
        android:layout_alignTop="@+id/movieBackdrop"
        android:layout_alignParentRight="true"
        android:background="@drawable/fav"
        android:layout_margin="10dp"
        android:textOff=""
        android:textOn=""
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_below="@+id/movieTitle"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/moviePoster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/movie_poster" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date"
                        android:textAppearance="?android:textAppearanceSmall" />

                    <TextView
                        android:id="@+id/releaseDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceLarge" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_rating"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:paddingTop="15dp"/>
                    <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ratingBar"
                        android:paddingTop="10dp"
                        android:isIndicator="true"
                        android:stepSize="0.01"
                        android:numStars="10"
                        style="?android:attr/ratingBarStyleSmall"/>

                    <TextView
                        android:id="@+id/userRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceLarge"/>

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAppearance="?android:textAppearanceSmall" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_trailor"
                android:textAppearance="?android:textAppearanceLarge" />

            <LinearLayout
                android:id="@+id/trailor1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/trailorButton1"
                    android:src="@drawable/play_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trailor1"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="?android:textAppearanceSmall" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/trailor2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/trailorButton2"
                    android:src="@drawable/play_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trailor2"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="?android:textAppearanceSmall" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:id="@+id/review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAppearance="?android:textAppearanceSmall" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>